[project]
name = "vote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
]
